# oracle-skills-directory

./: .gitignore  AGENTS.md  DIRECTORY.md  README.md  oracle_skills_catalog.json  oracle_skills_catalog.md  oracle_skills_summary.md  pyproject.toml
.github/workflows/: mirror-to-gitlab.yml
scripts/: generate_directory.py
tests/: test_directory.py
